--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
