--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.17",
+    "@mui/material": "^5.15.18",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.2",
     "react": "^18.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.1.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^5.3.3",
